# apodiformes

./: .gitignore  Makefile  Makefile.am  apo.config  configure.ac  makefile
Apodiformes.xcodeproj/: project.pbxproj
Apodiformes.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
docs/: aiw-1.tok  aiw-2.tok  aiw-3.tok  aiw.tok  aiw.txt
docs/alice/: aiw1-2.txt  aiw1-3.txt  aiw1-4.txt  aiw2-1.txt  aiw2-2.txt  aiw2-3.txt  aiw2-4.txt  aiw3-1.txt  aiw3-2.txt  aiw4-1.txt  aiw4-2.txt  aiw4-3.txt  aiw4-4.txt
include/: CommandLineOptions.h  Common.h  Document.h  File.h  KneserNey.h  Makefile.am  TFIDF.h  VectorSpaceModel.h  Writers.h  apodiformes.h
src/: Apodiformes.cpp  Common.cpp  Common.h  Document.cpp  File.cpp  KneserNey.cpp  Makefile.am  TFIDF.cpp  VectorSpaceModel.cpp  apodiformes.cpp
