AM_CPPFLAGS = -I$(top_srcdir)/include -I/users/spraak/onrust/software/apodiformes/include -I/users/spraak/onrust/software/colibri-core/include -I/users/spraak/lonrust/local/include 
AM_LDFLAGS = -L/users/spraak/onrust/software/colibri-core/src/.libs
AM_LDLIBS = -lglog -colibricore -lbz2
bin_PROGRAMS = apodiformes
apodiformes_SOURCES = Apodiformes.cpp
