#AM_CPPFLAGS = -I$(top_srcdir)/include -I/users/spraak/onrust/software/apodiformes/include -I/users/spraak/onrust/software/colibri-core/include -I/users/spraak/lonrust/local/include 
#AM_LDFLAGS = -L/users/spraak/onrust/software/colibri-core/src/.libs
#AM_LDLIBS = -lglog -colibricore -lbz2
#bin_PROGRAMS = apodiformes
#apodiformes_SOURCES = Apodiformes.cpp
AM_CPPFLAGS = -I/home/lonrust/Software/apodiformes/include -I$(top_srcdir)/include -I/users/spraak/onrust/local/include -I/users/spraak/onrust/colibri-core/include

bin_PROGRAMS = apodiformes

apodiformes_CXXFLAGS = -Wall
apodiformes_SOURCES = Apodiformes.cpp
